--- a/index.html
+++ b/index.html
@@ -6,28 +6,30 @@
     <title>Drag and Drop Words</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
 
         .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
             background-color: #fff;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            text-align: center;
         }
 
         .line {
-            width: 100%;
-            height: 40px;
-            border: 2px dashed #ccc;
-            margin-bottom: 10px;
-            padding: 10px;
+            background-color: #ecf0f1;
+            border: 2px dashed #bdc3c7;
+            border-radius: 5px;
+            padding: 20px;
+            margin: 10px 0;
+            min-height: 50px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -36,10 +38,12 @@
         .word {
             background-color: #3498db;
             color: #fff;
-            padding: 5px 10px;
+            padding: 10px 20px;
             border-radius: 5px;
             cursor: pointer;
             user-select: none;
+            margin: 5px;
+            transition: background-color 0.3s ease;
         }
 
         .word:hover {
@@ -49,6 +53,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>Drag and Drop Words</h1>
         <div class="line" data-word="concrete"></div>
         <div class="line" data-word="words"></div>
         <div class="line" data-word="mind"></div>
