--- a/index.html
+++ b/index.html
@@ -3,47 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Drag and Drop Words</title>
+    <title>Cool Drag and Drop Words</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f0f0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            background-color: #f5f5f5;
             margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
         }
 
         .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px;
             background-color: #fff;
             border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
             padding: 20px;
-            text-align: center;
         }
 
         .line {
-            background-color: #ecf0f1;
-            border: 2px dashed #bdc3c7;
-            border-radius: 5px;
-            padding: 20px;
-            margin: 10px 0;
-            min-height: 50px;
+            width: 120px;
+            height: 60px;
+            border: 2px dashed #ccc;
+            margin: 5px;
+            padding: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 18px;
+            font-weight: bold;
         }
 
         .word {
             background-color: #3498db;
             color: #fff;
-            padding: 10px 20px;
+            padding: 8px 15px;
             border-radius: 5px;
             cursor: pointer;
             user-select: none;
+            font-size: 16px;
             margin: 5px;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease-in-out;
         }
 
         .word:hover {
@@ -53,7 +58,6 @@
 </head>
 <body>
     <div class="container">
-        <h1>Drag and Drop Words</h1>
         <div class="line" data-word="concrete"></div>
         <div class="line" data-word="words"></div>
         <div class="line" data-word="mind"></div>
