--- a/index.html
+++ b/index.html
@@ -56,19 +56,20 @@
     
     <div class="container">
         <div class="word" draggable="true" ondragstart="drag(event)">concrete</div>
-        <div class="word" draggable="true" ondragstart="drag(event)">words</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">memories</div>
         <div class="word" draggable="true" ondragstart="drag(event)">mind</div>
         <div class="word" draggable="true" ondragstart="drag(event)">on</div>
-        <div class="word" draggable="true" ondragstart="drag(event)">memories</div>
         <div class="word" draggable="true" ondragstart="drag(event)">sun</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">words</div>
         <div class="word" draggable="true" ondragstart="drag(event)">to</div>
         <div class="word" draggable="true" ondragstart="drag(event)">moon</div>
-        <div class="word" draggable="true" ondragstart="drag(event)">that's</div>
-        <div class="word" draggable="true" ondragstart="drag(event)">cool</div>
         <div class="word" draggable="true" ondragstart="drag(event)">miles</div>
-        <div class="word" draggable="true" ondragstart="drag(event)">interlude</div>
-        <div class="word" draggable="true" ondragstart="drag(event)">and</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">cool</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">that's</div>
         <div class="word" draggable="true" ondragstart="drag(event)">hair</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">and</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">interlude</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">enough</div>
     </div>
 
     <script>
