--- a/index.html
+++ b/index.html
@@ -46,12 +46,73 @@
         <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
             <div class="number">2.</div>
         </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">3.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">4.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">5.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">6.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">7.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">8.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">9.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">10.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">11.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">12.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">13.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">14.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">15.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">16.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">17.</div>
+        </div>
+        <div class="line" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="number">18.</div>
+        </div>
         <!-- Add more lines as needed -->
     </div>
     
     <div class="container">
         <div class="word" draggable="true" ondragstart="drag(event)">concrete</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">enough</div>
         <div class="word" draggable="true" ondragstart="drag(event)">memories</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">mind</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">on</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">sun</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">words</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">to</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">moon</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">miles</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">cool</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">that's</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">hair</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">and</div>
+        <div class="word" draggable="true" ondragstart="drag(event)">interlude</div>
         <!-- Add more words as needed -->
     </div>
 
